Adjusted strings and dimens

--- a/app/src/main/res/layout/navigation_drawer.xml
+++ b/app/src/main/res/layout/navigation_drawer.xml
@@ -31,7 +31,7 @@
                 android:layout_gravity="center_vertical"
                 android:textColor="#ffffff"
                 android:text="@string/account_name_unauthorized"
-                android:textSize="14sp"
+                android:textSize="@dimen/account_name_text_size"
                 android:textStyle="bold" />
 
             <ImageView
