--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -49,5 +49,6 @@
     <dimen name="link_thumbnail_size">64dp</dimen>
     <dimen name="navigation_drawer_icon_size">24dp</dimen>
     <dimen name="comment_stub_row_height">32dp</dimen>
+    <dimen name="account_name_text_size">16sp</dimen>
 
 </resources>
