--- a/app/src/main/res/menu/links_menu.xml
+++ b/app/src/main/res/menu/links_menu.xml
@@ -10,13 +10,13 @@
 
     <item
         android:id="@+id/action_change_sort"
-        android:title="@string/action_change_sort"
+        android:title="@string/action_sort"
         android:icon="@drawable/ic_change_sort"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/action_change_timespan"
-        android:title="@string/action_change_timespan"
+        android:title="@string/action_timespan"
         android:icon="@drawable/ic_change_timespan"
         app:showAsAction="ifRoom" />
 
