--- a/app/src/main/res/layout/navigation_drawer.xml
+++ b/app/src/main/res/layout/navigation_drawer.xml
@@ -40,8 +40,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_marginEnd="?android:attr/listPreferredItemPaddingEnd"
-                android:layout_marginRight="?android:attr/listPreferredItemPaddingEnd"
+                android:layout_marginEnd="@dimen/navigation_drawer_icon_margin"
+                android:layout_marginRight="@dimen/navigation_drawer_icon_margin"
                 android:src="@drawable/ic_navigation_close"/>
 
         </LinearLayout>
