--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -51,5 +51,6 @@
     <dimen name="comment_data_height">32dp</dimen>
     <dimen name="account_name_text_size">16sp</dimen>
     <dimen name="comment_saved_icon_margin">6dp</dimen>
+    <dimen name="navigation_drawer_icon_margin">16dp</dimen>
 
 </resources>
