--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -39,8 +39,8 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/navigation_drawer_item_height</item>
         <item name="android:orientation">horizontal</item>
-        <item name="android:paddingLeft">?android:attr/listPreferredItemPaddingStart</item>
-        <item name="android:paddingRight">?android:attr/listPreferredItemPaddingEnd</item>
+        <item name="android:paddingLeft">@dimen/navigation_drawer_item_margin</item>
+        <item name="android:paddingRight">@dimen/navigation_drawer_item_margin</item>
     </style>
 
     <style name="NavigationDrawerItemIcon">
@@ -55,15 +55,15 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center_vertical</item>
         <item name="android:textColor">@color/primary_text</item>
-        <item name="android:textAppearance">?android:attr/textAppearanceListItemSmall</item>
+        <item name="android:textSize">@dimen/navigation_drawer_item_text</item>
     </style>
 
     <style name="NavigationDrawerEditText">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">fill_parent</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:textAppearance">?android:attr/textAppearanceListItemSmall</item>
         <item name="android:textColor">@color/primary_text</item>
+        <item name="android:textSize">@dimen/navigation_drawer_item_text</item>
         <item name="android:textColorHint">@color/secondary_text</item>
     </style>
 
@@ -150,4 +150,6 @@
         <item name="android:topDark">@color/transparent</item>
     </style>
 
+    <dimen name="navigation_drawer_item_margin">16dp</dimen>
+    <dimen name="navigation_drawer_item_text">18sp</dimen>
 </resources>
