--- a/app/src/main/res/layout/navigation_drawer.xml
+++ b/app/src/main/res/layout/navigation_drawer.xml
@@ -10,18 +10,32 @@
         android:layout_height="@dimen/navigation_drawer_header_height"
         android:background="@color/primary_dark">
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_gravity="start|top"
+            android:src="@drawable/ic_account_circle"/>
+
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
             android:orientation="horizontal"
-            android:layout_gravity="bottom">
+            android:layout_gravity="start|bottom">
 
             <ImageView
                 android:id="@+id/user_account_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="18dp"
+                android:layout_height="18dp"
+                android:layout_marginEnd="4dp"
+                android:layout_marginRight="4dp"
                 android:layout_gravity="center_vertical"
-                android:src="@drawable/ic_user_account"/>
+                android:src="@drawable/ic_gilded_2"/>
 
             <TextView
                 android:id="@+id/account_name"
@@ -31,7 +45,7 @@
                 android:layout_gravity="center_vertical"
                 android:textColor="#ffffff"
                 android:text="@string/account_name_unauthorized"
-                android:textSize="@dimen/account_name_text_size"
+                android:textSize="@dimen/navigation_drawer_account_name_text"
                 android:textStyle="bold" />
 
             <ImageView
@@ -42,7 +56,7 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginEnd="@dimen/navigation_drawer_icon_margin"
                 android:layout_marginRight="@dimen/navigation_drawer_icon_margin"
-                android:src="@drawable/ic_navigation_close"/>
+                android:src="@drawable/ic_sign_out"/>
 
         </LinearLayout>
 
