--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -48,7 +48,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginRight="@dimen/comment_author_margin"
                     android:layout_marginEnd="@dimen/comment_author_margin"
-                    android:text="andrewsmith1984"
+                    android:text="thisisaverylongusername"
                     android:textColor="@color/secondary_text"
                     android:textStyle="bold"
                     android:textSize="@dimen/comment_author_text_size"
@@ -92,27 +92,34 @@
                     android:maxLines="1"/>
 
                 <LinearLayout
-                    android:id="@+id/gilded_view"
-                    android:orientation="horizontal"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:orientation="horizontal"
                     android:gravity="end">
 
-                    <ImageView
-                        android:id="@+id/gilded_image_view"
-                        android:layout_width="16dp"
-                        android:layout_height="16dp"
-                        android:layout_gravity="center_vertical"
-                        android:src="@drawable/ic_gilded_filled_outlined"/>
-
-                    <TextView
-                        android:id="@+id/comment_gilded_text_view"
+                    <LinearLayout
+                        android:id="@+id/gilded_view"
+                        android:orientation="horizontal"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        style="@style/GildedTextView"
-                        android:text="@string/link_gilded_text"/>
+                        android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:id="@+id/gilded_image_view"
+                            android:layout_width="16dp"
+                            android:layout_height="16dp"
+                            android:layout_gravity="center_vertical"
+                            android:src="@drawable/ic_gilded_filled_outlined"/>
+
+                        <TextView
+                            android:id="@+id/comment_gilded_text_view"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            style="@style/GildedTextView"
+                            android:text="@string/link_gilded_text"/>
+
+                    </LinearLayout>
 
                     <ImageView
                         android:id="@+id/comment_saved_icon"
