Implemented subreddit navigation as a dialog with a custom view

--- a/app/src/main/res/layout/navigation_drawer_edit_text_row.xml
+++ b/app/src/main/res/layout/navigation_drawer_edit_text_row.xml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/navigation_drawer_item"
-    style="@style/NavigationDrawerItem">
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/navigation_drawer_item_height"
+    android:orientation="horizontal"
+    android:paddingLeft="@dimen/navigation_drawer_item_margin"
+    android:paddingRight="@dimen/navigation_drawer_item_margin" >
 
     <com.ddiehl.android.simpleredditreader.view.widgets.RedditNavEditText
         android:id="@+id/drawer_navigate_to_subreddit_text"
-        style="@style/NavigationDrawerEditText"
-        android:hint="@string/drawer_navigate_to_subreddit_text"
+        android:layout_width="@dimen/navigation_drawer_width"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:textColor="@color/primary_text"
+        android:textSize="@dimen/navigation_drawer_item_text"
+        android:textColorHint="@color/secondary_text"
+        android:hint="@string/drawer_navigate_to_subreddit"
         android:imeOptions="actionDone"
         android:inputType="text"
         android:singleLine="true"
@@ -14,7 +23,10 @@
 
     <ImageView
         android:id="@+id/drawer_navigate_to_subreddit_go"
-        style="@style/NavigationDrawerItemIcon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:color="@color/accent"
         android:src="@drawable/ic_navigation_go"/>
 
 </LinearLayout>
