--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -10,12 +10,21 @@
     </string-array>
 
     <string-array name="comment_sort_options">
+        <item>best</item>
+        <item>top</item>
+        <item>new</item>
+        <item>controversial</item>
+        <item>old</item>
+        <item>q&#38;a</item>
+    </string-array>
+
+    <string-array name="comment_sort_option_values">
         <item>confidence</item>
         <item>top</item>
         <item>new</item>
-        <item>hot</item>
         <item>controversial</item>
         <item>old</item>
+        <item>qa</item>
     </string-array>
 
     <string-array name="timespan_options">
