--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-    android:key="prefs_category">
+    android:key="prefs_user">
 
-
+    <ListPreference
+        android:key="pref_comment_sort"
+        android:title="@string/menu_sort_title"
+        android:dialogTitle="@string/menu_sort_title"
+        android:entries="@array/comment_sort_options"
+        android:entryValues="@array/comment_sort_option_values"
+        android:defaultValue="@string/default_comment_sort"
+        android:summary="%s" />
 
 </PreferenceScreen>
