--- a/app/src/main/res/layout/listings_link.xml
+++ b/app/src/main/res/layout/listings_link.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/link_card_margin"
+    android:layout_marginTop="@dimen/link_card_margin"
+    android:layout_marginBottom="@dimen/link_card_margin"
     card_view:cardElevation="@dimen/link_card_elevation"
-    card_view:cardCornerRadius="@dimen/link_card_corner_radius">
+    card_view:cardCornerRadius="@dimen/link_card_corner_radius"
+    card_view:cardUseCompatPadding="true">
 
     <LinearLayout
         android:id="@+id/link_view"
