--- a/app/src/main/res/layout/listings_comment.xml
+++ b/app/src/main/res/layout/listings_comment.xml
@@ -10,6 +10,15 @@
     card_view:cardCornerRadius="@dimen/link_card_corner_radius"
     card_view:cardUseCompatPadding="true">
 
-    <include layout="@layout/link_comments_comment" />
+    <LinearLayout
+        android:id="@+id/comment_item_row"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/listings_comment_bg">
+
+        <include layout="@layout/comment_layout" />
+
+    </LinearLayout>
 
 </android.support.v7.widget.CardView>
